# black-jack

./: .coverage  .gitignore  Dealer.py  Deck.py  Display.py  Display_0.py  Display_2.py  Display_3.py  Game.py  GameAssistant.py  Player.py  README.md  black_jack_environment.yml  black_jack_game.py  black_jack_game_20180410.py  black_jack_game_20180427.py  black_jack_game_old.py  black_jack_requirments.txt  cardforms.py  gameUtils.py  main.py  pyproject.toml  testing_script.py
core/: Dealer.py  Deck.py  Game.py  GameAssistant.py  Player.py
game_display/: Display.py  cardforms.py
notebooks/: chatgpt_logreg_from_scratch.md  classification_modeling.ipynb  logisticRegression.py  regression_modeling.ipynb
tests/: dealer_tests.py  how-to-run-tests.md  player_tests.py  test_dealer.py  test_game.py  test_player.py
