[project]
name = "black-jack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage==7.5.0",
    "ipykernel==6.29.3",
    "ipython==8.22.2",
    "keyboard==0.13.5",
    "markdown==3.4.3",
    "matplotlib==3.8.3",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "polars==0.20.15",
    "pytorch==2.2.2",
    "pytorch-lightning==2.2.1",
    "scikit-learn==1.5.*",
    "scipy==1.11.4",
    "tqdm==4.64.1",
]
